--- a/AppXamarin/XamarinApp/XamarinApp/Pages/PatientViews/PatientMainPage.xaml
+++ b/AppXamarin/XamarinApp/XamarinApp/Pages/PatientViews/PatientMainPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="XamarinApp.Pages.PatientMainPage"
+             x:Class="XamarinApp.Pages.PatientViews.PatientMainPage"
              BackgroundColor="#E8E8E8"
              Title="Panel de control">
   <ScrollView>
@@ -12,7 +12,7 @@
                 VerticalOptions="CenterAndExpand"
                 BackgroundColor="Transparent"
                 Clicked="AppointmentsClicked"
-                Image="Citas.png"/> 
+                Image="Citas.png"/>
         <Label  FontSize="20"
                 FontAttributes="Italic"
                 Text="Citas"
