--- a/AppXamarin/XamarinApp/XamarinApp/Pages/AppointmentInformation.xaml
+++ b/AppXamarin/XamarinApp/XamarinApp/Pages/AppointmentInformation.xaml
@@ -3,6 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="XamarinApp.Pages.AppointmentInformation"
              Title="Expediente Médico" BackgroundColor="#9B9B9B" >
+
+  <ContentPage.ToolbarItems>
+    <ToolbarItem Text="Configuracion"
+                 Order="Secondary"
+                 Clicked="MedexpConfigurationClicked"/>
+  </ContentPage.ToolbarItems>
+  
     <Grid>
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="1*"/>
