--- a/AppXamarin/XamarinApp/XamarinApp/Pages/FirstPage.xaml
+++ b/AppXamarin/XamarinApp/XamarinApp/Pages/FirstPage.xaml
@@ -3,6 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="XamarinApp.Pages.FirstPage"
              Title ="Página principal">
+
+  <ContentPage.ToolbarItems>
+    <ToolbarItem Text="Configuracion"
+                 Order="Secondary"
+                 Clicked="MedexpConfigurationClicked"/>
+  </ContentPage.ToolbarItems>
   
   <ScrollView>
     <StackLayout BackgroundColor="#222" Orientation="Vertical" Padding="100">
