--- a/AppXamarin/XamarinApp/XamarinApp/Pages/Medicines.xaml
+++ b/AppXamarin/XamarinApp/XamarinApp/Pages/Medicines.xaml
@@ -3,6 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="XamarinApp.Pages.Medicines"
              Title="Lista de Medicinas" BackgroundColor="#fafafa">
+
+  <ContentPage.ToolbarItems>
+    <ToolbarItem Text="Configuracion"
+                 Order="Secondary"
+                 Clicked="MedexpConfigurationClicked"/>
+  </ContentPage.ToolbarItems>
+  
   <StackLayout>
     <ListView x:Name="MedicinesListView">
       <ListView.ItemTemplate>
