Patient and doctor photos

--- a/AppXamarin/XamarinApp/XamarinApp/Pages/ConfigurationPage.xaml
+++ b/AppXamarin/XamarinApp/XamarinApp/Pages/ConfigurationPage.xaml
@@ -16,7 +16,8 @@
     </Grid>
 
     <Grid Grid.Column="1">
-      <Switch HorizontalOptions="Center"
+      <Switch x:Name="NotificationSwitch"
+              HorizontalOptions="Center"
               Toggled="Switch_OnToggled"
               VerticalOptions="Start"/>
     </Grid>
