--- a/AppXamarin/XamarinApp/XamarinApp/Pages/LoginPage.xaml
+++ b/AppXamarin/XamarinApp/XamarinApp/Pages/LoginPage.xaml
@@ -14,7 +14,7 @@
   
   <ScrollView>
     <StackLayout Padding="90,30,90,30" Spacing="15" BackgroundColor="#222">
-      <Image Source="http://www.medexp.com.mx/Static/Imgs/logo.png"
+      <Image Source="logo.png"
              HorizontalOptions="Center"
              HeightRequest="180" /> 
       <ActivityIndicator x:Name="waitActivityIndicator"
