--- a/AppXamarin/XamarinApp/XamarinApp/Pages/DoctorViews/DoctorMainPage.xaml
+++ b/AppXamarin/XamarinApp/XamarinApp/Pages/DoctorViews/DoctorMainPage.xaml
@@ -9,6 +9,9 @@
     <ToolbarItem Text="Configuracion"
                  Order="Secondary"
                  Clicked="MedexpConfigurationClicked"/>
+    <ToolbarItem Text="Cerrar sesión"
+                 Order="Secondary"
+                 Clicked="SignOut"/>
   </ContentPage.ToolbarItems>
 
   <ScrollView>
